--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>rest</module>
 		<module>server</module>
 		<module>service</module>
+		<module>client</module>
 	</modules>
 
 	<properties>
@@ -32,6 +33,7 @@
 		<!--dependencies-->
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 		<org.projectlombok.version>1.18.12</org.projectlombok.version>
+		<com.fasterxml.jackson.dataformat.version>2.11.2</com.fasterxml.jackson.dataformat.version>
 
 		<!--plugins-->
 		<org.apache.maven.plugins.version>3.8.1</org.apache.maven.plugins.version>
@@ -57,6 +59,12 @@
 				<version>${project.version}</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>ru.dev.interview.project</groupId>
+				<artifactId>service</artifactId>
+				<version>${project.version}</version>
+				<scope>provided</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>org.mapstruct</groupId>
@@ -69,6 +77,11 @@
 				<artifactId>lombok</artifactId>
 				<version>${org.projectlombok.version}</version>
 				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-xml</artifactId>
+				<version>${com.fasterxml.jackson.dataformat.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
