--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,6 +26,10 @@
             <groupId>ru.dev.interview.project</groupId>
             <artifactId>rest</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.dev.interview.project</groupId>
+            <artifactId>domain</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -34,7 +38,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
