--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>phonebook</artifactId>
-        <groupId>ru.dev.interview.project</groupId>
+        <artifactId>root</artifactId>
+        <groupId>ru.dev.interview.project.phonebook</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>domain</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <name>domain</name>
     <description>Contains entities, repositories, daos</description>
 
     <dependencies>
