--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>phonebook</artifactId>
-        <groupId>ru.dev.interview.project</groupId>
+        <artifactId>root</artifactId>
+        <groupId>ru.dev.interview.project.phonebook</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rest</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <name>rest</name>
     <description>REST API</description>
 
     <dependencies>
@@ -30,11 +29,11 @@
         </dependency>
 
         <dependency>
-            <groupId>ru.dev.interview.project</groupId>
+            <groupId>ru.dev.interview.project.phonebook</groupId>
             <artifactId>service</artifactId>
         </dependency>
         <dependency>
-            <groupId>ru.dev.interview.project</groupId>
+            <groupId>ru.dev.interview.project.phonebook</groupId>
             <artifactId>dto</artifactId>
         </dependency>
     </dependencies>
